Added toList/fromList, and fixed bug in the stride computing routines.

--- a/NDArray.cabal
+++ b/NDArray.cabal
@@ -11,6 +11,7 @@ Library
                     Blueprint >= 0.2,
                     QuickCheck == 2.*,
                     random == 1.*,
-                    Vec == 0.9.*
+                    Vec == 0.9.*,
+                    InfixApplicative == 1.*
 -- @-node:gcross.20091217190104.1397:@thin NDArray.cabal
 -- @-leo
